update favicon in calc directory

--- a/calc/index.html
+++ b/calc/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Калькулятор</title>
+    <link rel="icon" type='image/png' href="/calc/favicon.png">
     <link rel="stylesheet" href="/calc/css/style.css">
     <script src="/calc/js/math.min.js"></script>
     <script src="/calc/js/calque.js"></script>
