добавил промо qr. Убрал редирект на сайт мерии - они мне не платят.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
-    <meta http-equiv="refresh" content="0; url=http://klgd.ru" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="description" content="Жизнь сетевого инженера-экспата в Российских реалиях Калининградской области бесплатно без смс." />
+    <meta name="title" content="Жизнь по телеграмме | Зайди и подпишись" />
+    <title>Жизнь по телеграмме | Зайди и подпишись</title>
+    <style>
+        .outer {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    </style>
 </head>
 
 <body>
+    <div class="outer" style="height:600px; width: 100%">
+        <span class="inner">
+            <a href="https://t.me/imkrb">
+                <img src="img/im.png" alt="https://t.me/imkrb">
+            </a>
+        </span>
+    </div>
 </body>
 
 </html>
