добавил переход по  тайм ауту

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 
 <head>
+    <meta http-equiv="refresh" content="15; url=https://t.me/imkrb" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="description" content="Жизнь сетевого инженера-экспата в Российских реалиях Калининградской области бесплатно без смс." />
     <meta name="title" content="Жизнь по телеграмме | Зайди и подпишись" />
