--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="refresh" content="15; url=https://t.me/imkrb" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="description" content="Жизнь сетевого инженера-экспата в Российских реалиях Калининградской области бесплатно без смс." />
-    <meta name="title" content="Жизнь по телеграмме | Зайди и подпишись" />
-    <title>Жизнь по телеграмме | Зайди и подпишись</title>
+    <meta name="title" content="Мне трудно подобрать слова | Зайди и подпишись" />
+    <title>Мне трудно подобрать слова | Зайди и подпишись</title>
     <style>
         .outer {
             display: flex;
